--- a/.env
+++ b/.env
@@ -1,26 +1,36 @@
+NODE_ENV = development
 
 PORT = 5000
 
-
-CLIENTURL = http://44.226.145.213:5000
-
-MONGODB_URL = "mongodb+srv://rifkhan:d3CnbCKG7klNuZ3m@cluster0.jh4wxm5.mongodb.net/?retryWrites=true&w=majority"
-
-WDS_SOCKET_PORT=0
-
+# DB_HOST = bgqkj885do0fsmykgmh9-mysql.services.clever-cloud.com
+# DB_USER = uw0eomuvqni498hc
+# DB_PASSWORD = rKMt68zhedzAIitAyGEx
+# DB_NAME = bgqkj885do0fsmykgmh9
+# DB_PORT = 3306
 
 
 
-
-
-
-
-
-
-
-RESETPASSWORD = 9892c70a8da9ad71f1829ad03c115408webhuser
+DB_HOST = bgqkj885do0fsmykgmh9-mysql.services.clever-cloud.com
+DB_USER = uw0eomuvqni498hc
+DB_PASSWORD = rKMt68zhedzAIitAyGEx
+DB_NAME = bgqkj885do0fsmykgmh9
+DB_PORT = 3306
 
 
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+SECRET_KEY = 9892c70a8da9ad71f1829ad03c115408
