--- a/.env
+++ b/.env
@@ -1,19 +1,12 @@
 NODE_ENV = development
 
-PORT = 5000
-
-# DB_HOST = bgqkj885do0fsmykgmh9-mysql.services.clever-cloud.com
-# DB_USER = uw0eomuvqni498hc
-# DB_PASSWORD = rKMt68zhedzAIitAyGEx
-# DB_NAME = bgqkj885do0fsmykgmh9
-# DB_PORT = 3306
+PORT = 8000
 
 
-
-DB_HOST = bgqkj885do0fsmykgmh9-mysql.services.clever-cloud.com
-DB_USER = uw0eomuvqni498hc
-DB_PASSWORD = rKMt68zhedzAIitAyGEx
-DB_NAME = bgqkj885do0fsmykgmh9
+DB_HOST = bvjviybttra2iggnfm1b-mysql.services.clever-cloud.com
+DB_USER = ummnk2bov4aopc62
+DB_PASSWORD = ummnk2bov4aopc62
+DB_NAME = bvjviybttra2iggnfm1b
 DB_PORT = 3306
 
 
