--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ PORT = 8000
 
 DB_HOST = bvjviybttra2iggnfm1b-mysql.services.clever-cloud.com
 DB_USER = ummnk2bov4aopc62
-DB_PASSWORD = ummnk2bov4aopc62
+DB_PASSWORD = Ux6HjAdxts9esSBVkPGU
 DB_NAME = bvjviybttra2iggnfm1b
 DB_PORT = 3306
 
