--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.2",
     "flatpickr": "^4.6.13",
+    "js-cookie": "^3.0.5",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.2",
     "react": "^18.2.0",
